<?xml version="1.0"?>
<package format="3">
  <name>finger_snap</name>
  <version>1.0.0</version>
  <description>finger_snap</description>
  <maintainer email="180447001@ccalumni.meijo-ua.c.jp">koki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>