<package>
  <name>ros2_test_iridescence</name>
  <version>1.0.0</version>
  <description>ros2 test package with Iridescence</description>
  <maintainer email="180447001@ccalumni.meijo-u.ac.jp">koki aoki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>